tests/mm0_mmu/fail/bad-sort4123.mmu
-- bad modifier order
(sort s4123 free pure strict provable)